# cs2-sdk-1

./: .gitignore  CMakeLists.txt
include/: game.hpp  interfaces.hpp  schemas.hpp
include/hooks/: hooks.hpp
include/sdk/: sdk.hpp
include/sdk/interfaces/: csgo_input.hpp  engine_client.hpp  game_resource_service.hpp  schema_system.hpp
include/sdk/misc/: base_anim_graph.hpp  base_combat_character.hpp  base_entity.hpp  base_flex.hpp  base_model_entity.hpp  base_player_pawn.hpp  cs_player_pawn.hpp  cs_player_pawn_base.hpp  user_cmd.hpp
include/utility/: call_virtual.hpp  fnv1a.hpp  memory.hpp  pe.hpp  virtual_raii_protect.hpp  vmt_hook.hpp
src/: game.cpp  interfaces.cpp  main.cpp  schemas.cpp
src/hooks/: create_move.cpp  frame_stage_notify.cpp  hooks.cpp  level_init.cpp  present.cpp  resize_buffers.cpp
src/utility/: memory.cpp  pe.cpp
